fix: off main scrollbar when popup open

--- a/migration-to-ts/src/components/view/news/news.css
+++ b/migration-to-ts/src/components/view/news/news.css
@@ -16,7 +16,7 @@
     top: 0;
     width: 100vw;
     height: 100vh;
-    background: rgba(23, 24, 28, 0.6);
+    background: rgba(23, 24, 28, 0.8);
     z-index: 1;
     display: none;
     align-items: center;
