--- a/migration-to-ts/src/global.css
+++ b/migration-to-ts/src/global.css
@@ -10,6 +10,10 @@ body {
     justify-content: space-between;
 }
 
+body.lock {
+    overflow: hidden;
+}
+
 header {
     padding: 10px 30px;
 }
